# backtrader-doc

./: .gitignore  README.md  analyzer.html  broker.html  cerebro.html  comminfo.html  dataseries.html  errors.html  feed.html  fillers.html  flt.html  indicator.html  linebuffer.html  lineiterator.html  lineroot.html  lineseries.html  observer.html  order.html  pyproject.toml  resamplerfilter.html  sizer.html  store.html  strategy.html  talib.html  timer.html  trade.html  tradingcal.html  writer.html
analyzers/: annualreturn.html  calmar.html  drawdown.html  leverage.html  logreturnsrolling.html  periodstats.html  positions.html  pyfolio.html  returns.html  sharpe.html  sqn.html  timereturn.html  tradeanalyzer.html  transactions.html  vwr.html
brokers/: bbroker.html  vcbroker.html
btrun/: btrun.html
commissions/: index.html
docs/: cerebro.html  dataseries.html  fillers.html  linebuffer.html  mathsupport.html  sizer.html  trade.html  tradingcal.html
feeds/: btcsv.html  chainer.html  csvgeneric.html  mt4csv.html  pandafeed.html  quandl.html  rollover.html  sierrachart.html  vcdata.html  vchart.html  vchartcsv.html  vchartfile.html  yahoo.html
filters/: bsplitter.html  calendardays.html  datafiller.html  datafilter.html  daysteps.html  renko.html  session.html
indicators/: atr.html  awesomeoscillator.html  crossover.html  directionalmove.html  dma.html  dpo.html  dv2.html  ema.html  envelope.html  heikinashi.html  hma.html  hurst.html  kama.html  kst.html  lrsi.html  mabase.html  ols.html  oscillator.html  percentrank.html  pivotpoint.html  priceoscillator.html  (+6 more)
(+120 files in other folders)
