[tool.poetry]
name = "backtrader-pdoc3"
version = "0.1.0"
description = ""
authors = ["pluto <mayuanchi1029@gmail.com>"]
readme = "README.md"
packages = [{include = "backtrader_pdoc3"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
